# codex-switch

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs
.github/workflows/: release.yml
scripts/: build-release.sh
src/: auth.rs  backup.rs  cli.rs  jwt.rs  main.rs  model.rs  profiles.rs  sessions.rs  tui.rs
tests/: account_cli.rs  doctor_cli.rs  profile_cli.rs  usage_cli.rs  version_cli.rs
tests/fixtures/: auth.json  auth_alt.json  cpa_auth.json  cpa_auth_alt.json
tests/fixtures/golden/: account.json  profile_list_single.json
