[package]
name = "codex-switch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
zip = "2"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"
quick-xml = "0.36"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
httpmock = "0.7"